Automatische Konfiguration vom Mega168 an den vorhandenen Speicherplatz angepaßt.
Bei Mega328 wird das UART bei Start deaktiviert wegen möglicherweise vorgeschaltetem Bootloader. 
Organisation der Kalibrierwerte vereinfacht.
Speicherbelegung von DisplayValue.c optimiert und Makefile für alle Versionen angepaßt.
Unterscheidung von Verarmungs-FETs und Anreicherungs-Fets/ bipolare Transistoren angepaßt.
wait_for_key_ms als Speicher optimierte Assembler-Version.
sleep_5ms mit verändertem Aufruf in C und Assembler Version.
getlog als eigene Datei in C und Speicher optimierte Assembler-Version.
TRIAC Erkennung erweitert, falsche Erkennung mit vertauschtem GC Anschluss als Thyristor wird vermieden.
Alle Makefiles auf geänderte Binde-Reihenfolge und Assembler Versionen umgestellt.
config.h in config.h und autoconf.h geteilt, config.h enthält die änderbaren Parameter.
Funktionen  lcd-routines und PinLayout als opimierte Assembler Versionen.
Reihenfolge der Objekt-Dateien beim Binden optimiert wegen rcall statt call.
Funktion i2lcd und u2lcd eingebaut, Assembler und C-Version
Fehler aus RvalOut.S beseitigt.
Der unkalibrierte Tester wird durch einen aktivierten Cursor angezeigt, ? character entfällt.
GetRLmultip.S kann Tabelle im EEprom oder Flash zugreifen, mega168 und mega8.
Slovakischer Hilfetest für unkalibrierten Tester ergänzt.
Für unkalibriert wird in 1. Zeile ein Fragezeichen an 16. Stelle statt Ausrufezeichen in 2. Zeile ausgegeben. 
Problem bei Pinreihenfolge bei Thyristorerkennung beseitigt.
Funktionen GetRLmultip, UfAusgabe, RvalOut und Refvoltage als getrennte C und Assembler-Version.
Für mega328 kann die Pinbelegung von Port B für die Widerstände in config.h frei gewählt werden.
Bei mega328 wird als Kennung für einen Widerstand bei der Diodenmessung ein Symbol statt R genommen.
Kombination von Dioden und Widerstand wird erkannt und nacheinander ausgegeben,
damit wird ein BU508D als zwei Dioden (BC und EC) und ein Widerstand (BE) gemessen.