@@ -27,9 +27,9 @@ Idx Name          Size      VMA       LMA       File off  Algn
                   CONTENTS, READONLY, DEBUGGING
  11 .debug_str    00000982  00000000  00000000  0000c724  2**0
                   CONTENTS, READONLY, DEBUGGING
- 12 .debug_loc    00001645  00000000  00000000  0000d0a6  2**0
+ 12 .debug_loc    000016af  00000000  00000000  0000d0a6  2**0
                   CONTENTS, READONLY, DEBUGGING
- 13 .debug_pubtypes 000002d9  00000000  00000000  0000e6eb  2**0
+ 13 .debug_pubtypes 000002d9  00000000  00000000  0000e755  2**0
                   CONTENTS, READONLY, DEBUGGING
 
 Disassembly of section .text:
