@@ -1,28 +1,2 @@
-:10000000AF57B950C24A97451141133D87395A3607
-:100010007E33E8308E2E692C712AA128F5266925B9
-:10002000F923A222622137201E1F161E1E1D341C1A
-:10003000571B851ABF1903195018A61704176A16FB
-:10004000D6154915C2144114C5134E13DC126E1295
-:1000500005129F113D11DF10841054657374656E95
-:100060002E2E2E00676572696E67006C65657221C1
-:1000700000646566656B7465732000426175746524
-:10008000696C0054726961630054687972697374B1
-:100090002E0020756E62656B2E004B65696E2C75A7
-:1000A0006E62656B2E206F646572006F64657220EE
-:1000B000646566656B74200054696D656F757421A5
-:1000C0000053656C62737474657374202E2E005433
-:1000D00072656E6E652050696E732100546573748D
-:1000E00020456E6465004261742E20004F4B002D48
-:1000F0004D4F53004A464554002D49474254004352
-:100100003D00423D004E504E00504E5000203132D6
-:10011000333D0055663D002056743D004056673D16
-:10012000002D032D0043656C6C21005643433D00B8
-:10013000204553523D0020566C6F73733D004C3D7B
-:1001400000202049723D002D012D002D022D002A96
-:10015000012020002D07062D0052695F48693D00EF
-:1001600052695F4C6F3D0043302000203530487AA3
-:100170000011191D1F1D1911001113171F1713113D
-:10018000001B1B1B1B1B1B1B00000F0818080F006C
-:1001900000001E0203021E0000706EE46D006B4D35
-:0E01A000030C00363638373836361414141473
+:0E000000030C00363638373836361414141414
 :00000001FF
