@@ -1,28 +1,2 @@
-:10000000AF57B950C24A97451141133D87395A3607
-:100010007E33E8308E2E692C712AA128F5266925B9
-:10002000F923A222622137201E1F161E1E1D341C1A
-:10003000571B851ABF1903195018A61704176A16FB
-:10004000D6154915C2144114C5134E13DC126E1295
-:1000500005129F113D11DF10841054657374696E91
-:10006000672E2E2E007765616B00656D70747921A7
-:100070000064616D61676564200070617274005492
-:100080007269616300546879726973742E00207517
-:100090006E6B6E6F776E004E6F2C20756E6B6E6F91
-:1000A000776E2C206F72006F722064616D616765DE
-:1000B00064200054696D656F7574210053656C662A
-:1000C00074657374206D6F64652E2E0069736F6C98
-:1000D0006174652050726F626521005465737420ED
-:1000E000456E64004261742E20004F4B002D4D4F31
-:1000F00053004A464554002D4947425400433D00B1
-:10010000423D004E504E00504E5000203132333DA3
-:100110000055663D002056743D004056673D002D59
-:10012000032D0043656C6C21005643433D00204580
-:1001300053523D0020566C6F73733D004C3D0020C0
-:100140002049723D002D012D002D022D002A012095
-:1001500020002D07062D0052695F48693D00526955
-:100160005F4C6F3D0043302000203530487A00114D
-:10017000191D1F1D1911001113171F171311001B33
-:100180001B1B1B1B1B1B00000F0818080F00000087
-:100190001E0203021E0000706EE46D006B4D030C26
-:0C01A00000363638373836361D1D1D1D60
+:0E000000030C00363638373836361D1D1D1DF0
 :00000001FF
