@@ -1,35 +1,2 @@
-:10000000AF57B950C24A97451141133D87395A3607
-:100010007E33E8308E2E692C712AA128F5266925B9
-:10002000F923A222622137201E1F161E1E1D341C1A
-:10003000571B851ABF1903195018A61704176A16FB
-:10004000D6154915C2144114C5134E13DC126E1295
-:1000500005129F113D11DF10841054657374656E95
-:100060002E2E2E00676572696E67006C65657221C1
-:1000700000646566656B7465732000426175746524
-:10008000696C0054726961630054687972697374B1
-:100090002E0020756E62656B2E004B65696E2C75A7
-:1000A0006E62656B2E206F646572006F64657220EE
-:1000B000646566656B74200054696D656F757421A5
-:1000C0000053656C62737474657374202E2E005433
-:1000D00072656E6E652050696E732100546573748D
-:1000E00020456E6465004261742E20004F4B002D48
-:1000F0004D4F53004A464554002D49474254004352
-:100100003D00423D004E504E00504E5000203132D6
-:10011000333D0055663D002056743D004056673D16
-:10012000002D032D0043656C6C21005643433D00B8
-:10013000204553523D0020566C6F73733D004C3D7B
-:1001400000202049723D002D012D002D022D002A96
-:10015000012020002D07062D0056657273696F6E11
-:1001600020312E31306B00494345303D0049434535
-:10017000733D005265663D005248663D0052482D71
-:100180000052482B002B524C2D203132203133208D
-:100190003233002B52482D2031322031332032337C
-:1001A0000052482F524C0052303D0052695F48695E
-:1001B0003D0052695F4C6F3D0043302000203530D8
-:1001C000487A0011191D1F1D1911001113171F174F
-:1001D0001311001B1B1B1B1B1B1B00000F08180807
-:1001E0000F0000001E0203021E0000041F11111167
-:1001F000111F04706EE46D006B4D203E3130306E87
-:1002000046005245465F433D005245465F523D0021
-:0E021000030C0039393B3A3B393914141414ED
+:0E000000030C0039393B3A3B393914141414FF
 :00000001FF
