@@ -1,36 +1,2 @@
-:10000000AF57B950C24A97451141133D87395A3607
-:100010007E33E8308E2E692C712AA128F5266925B9
-:10002000F923A222622137201E1F161E1E1D341C1A
-:10003000571B851ABF1903195018A61704176A16FB
-:10004000D6154915C2144114C5134E13DC126E1295
-:1000500005129F113D11DF10841054657374696E91
-:10006000672E2E2E007765616B00656D70747921A7
-:100070000064616D61676564200070617274005492
-:100080007269616300546879726973742E00207517
-:100090006E6B6E6F776E004E6F2C20756E6B6E6F91
-:1000A000776E2C206F72006F722064616D616765DE
-:1000B00064200054696D656F7574210053656C662A
-:1000C00074657374206D6F64652E2E0069736F6C98
-:1000D0006174652050726F626521005465737420ED
-:1000E000456E64004261742E20004F4B002D4D4F31
-:1000F00053004A464554002D4947425400433D00B1
-:10010000423D004E504E00504E5000203132333DA3
-:100110000055663D002056743D004056673D002D59
-:10012000032D0043656C6C21005643433D00204580
-:1001300053523D0020566C6F73733D004C3D0020C0
-:100140002049723D002D012D002D022D002A012095
-:1001500020002D07062D0056657273696F6E2031E1
-:100160002E31306B00494345303D00494345733DD6
-:10017000005265663D005248663D0052482D0052CF
-:10018000482B002B524C2D2031322031332032337A
-:10019000002B52482D20313220313320323300528F
-:1001A000482F524C0052303D0052695F48693D0073
-:1001B00052695F4C6F3D0043302000203530487A53
-:1001C0000011191D1F1D1911001113171F171311ED
-:1001D000001B1B1B1B1B1B1B00000F0818080F001C
-:1001E00000001E0203021E0000041F111111111F46
-:1001F00004706E056D006B4D00111111131D101070
-:10020000203E3130306E46005245465F433D00523D
-:1002100045465F523D00030C0039393B3A3B3939C2
-:04022000141414148A
+:0E000000030C0039393B3A3B393914141414FF
 :00000001FF
