@@ -1,36 +1,2 @@
-:10000000AF57B950C24A97451141133D87395A3607
-:100010007E33E8308E2E692C712AA128F5266925B9
-:10002000F923A222622137201E1F161E1E1D341C1A
-:10003000571B851ABF1903195018A61704176A16FB
-:10004000D6154915C2144114C5134E13DC126E1295
-:1000500005129F113D11DF10841054657374696E91
-:10006000672E2E2E007765616B00656D70747921A7
-:100070000064616D61676564200070617274005492
-:100080007269616300546879726973742E00207517
-:100090006E6B6E6F776E004E6F2C20756E6B6E6F91
-:1000A000776E2C206F72006F722064616D616765DE
-:1000B00064200054696D656F7574210053656C662A
-:1000C00074657374206D6F64652E2E0069736F6C98
-:1000D0006174652050726F626521005465737420ED
-:1000E000456E64004261742E20004F4B002D4D4F31
-:1000F00053004A464554002D4947425400433D00B1
-:10010000423D004E504E00504E5000203132333DA3
-:100110000055663D002056743D004056673D002D59
-:10012000032D0043656C6C21005643433D00204580
-:1001300053523D0020566C6F73733D004C3D0020C0
-:100140002049723D00566578743D002D012D002D2B
-:10015000022D002A012020002D07062D0056657271
-:1001600073696F6E20312E31306B00494345303D4D
-:1001700000494345733D005265663D005248663D67
-:100180000052482D0052482B002B524C2D2031326A
-:10019000203133203233002B52482D203132203190
-:1001A000332032330052482F524C0052303D00521F
-:1001B000695F48693D0052695F4C6F3D00433020E4
-:1001C00000203530487A0011191D1F1D191100112A
-:1001D00013171F171311001B1B1B1B1B1B1B0000DE
-:1001E0000F0818080F0000001E0203021E00000482
-:1001F0001F111111111F04706E056D006B4D001160
-:100200001111131D1010203E3130306E4600524542
-:10021000465F433D005245465F523D00030C0039A6
-:0A022000393B3A3B39391414141429
+:0E000000030C0039393B3A3B393914141414FF
 :00000001FF
