@@ -1,3 +1,5 @@
+Die Abgleichdaten im EEprom werden ohne USE_EEPROM im Programm initialisiert, wenn unbesetzt.
+Alle mega328 Beispielkonfigurationen sind ohne USE_EEPROM konfiguriert.
 Automatische Konfiguration vom Mega168 an den vorhandenen Speicherplatz angepaßt.
 Bei Mega328 wird das UART bei Start deaktiviert wegen möglicherweise vorgeschaltetem Bootloader. 
 Organisation der Kalibrierwerte vereinfacht.
